--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -597,10 +597,6 @@ service mmi-touch-sh /system/bin/sh /init.mmi.touch.sh synaptics aps
     user root
     oneshot
 
-service charge_only_mode /system/bin/charge_only_mode
-    user root
-    disabled
-
 service mpdecision /system/bin/mpdecision --avg_comp
     user root
     group root system
@@ -817,6 +813,7 @@ on property:ro.bootmode=mot-charger
     write /sys/module/lpm_levels/enable_low_power/l2 3
     write /sys/class/leds/lcd-backlight/brightness 255
     write /sys/module/msm_pm/modes/cpu0/power_collapse/idle_enabled 0
+    exec /system/bin/charge_only_mode
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
