--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -604,6 +604,11 @@ service moto_charge_only_mode /system/bin/charge_only_mode
     user root
     disabled
 
+service mpdecision /system/bin/mpdecision --avg_comp
+    user root
+    group root system
+    disabled
+
 on property:ro.use_data_netmgrd=false
     stop netmgrd
 
@@ -868,21 +873,25 @@ on property:sys.boot_completed=1
     chmod 0664 /sys/devices/system/cpu/cpu1/online
     chmod 0664 /sys/devices/system/cpu/cpu2/online
     chmod 0664 /sys/devices/system/cpu/cpu3/online
+    start mpdecision
 
 # Powersave
 on property:sys.perf.profile=0
+    start mpdecision
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
     write /sys/class/devfreq/fdb00000.qcom,kgsl-3d0/governor powersave
     write /sys/class/devfreq/qcom,cpubw.63/governor powersave
 
 # Balanced
 on property:sys.perf.profile=1
+    start mpdecision
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
     write /sys/class/devfreq/fdb00000.qcom,kgsl-3d0/governor msm-adreno-tz
     write /sys/class/devfreq/qcom,cpubw.63/governor msm_cpufreq
 
 # High performance
 on property:sys.perf.profile=2
+    stop mpdecision
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
